<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/mainScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/studentIDContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                app:helperText="@string/required"
                app:helperTextTextColor="@color/red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="20dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eStudentID"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="1"
                    android:inputType="number"
                    android:hint="@string/studentID"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                app:helperText="@string/required"
                app:helperTextTextColor="@color/red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/studentIDContainer"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="20dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="1"
                    android:inputType="text"
                    android:hint="@string/name"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/citizenIDContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                app:helperText="@string/required"
                app:helperTextTextColor="@color/red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameContainer"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="20dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eCitizenID"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="1"
                    android:inputType="number"
                    android:hint="@string/citizenID"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                app:helperText="@string/required"
                app:helperTextTextColor="@color/red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/citizenIDContainer"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="20dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ePhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="1"
                    android:inputType="number"
                    android:hint="@string/phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                app:helperText="@string/required"
                app:helperTextTextColor="@color/red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phoneContainer"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="20dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="1"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/BODContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                app:helperText="@string/required"
                app:helperTextTextColor="@color/red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailContainer"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="20dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eBOD"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="1"
                    android:inputType=""
                    android:hint="@string/BOD"
                    android:enabled="false"/>

                <Button
                    android:id="@+id/buttonPickDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Pick Date" />

                <CalendarView
                    android:id="@+id/calendarView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addressContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                app:helperText="@string/required"
                app:helperTextTextColor="@color/red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/BODContainer"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="20dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="1"
                    android:inputType="text"
                    android:hint="@string/address"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addressPresentContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                app:helperText="@string/required"
                app:helperTextTextColor="@color/red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addressContainer"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="20dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eAddressPresent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="1"
                    android:inputType="text"
                    android:hint="@string/addressPresent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/majorsContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addressPresentContainer"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="20dp"
                app:helperTextTextColor="@color/red">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="1"
                    android:text="@string/majors"/>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioGroup">
                    <RadioButton
                        android:id="@+id/button1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Kỹ thuật máy tính"/>
                    <RadioButton
                        android:id="@+id/button2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Khoa học máy tính"/>
                </RadioGroup>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/languageCodeContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/majorsContainer"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="20dp"
                app:helperTextTextColor="@color/red">
                <TextView
                    android:id="@+id/languageGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="1"
                    android:inputType=""
                    android:text="@string/languageCode"/>
                <CheckBox
                    android:id="@+id/checkboxC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="C"/>
                <CheckBox
                    android:id="@+id/checkboxJava"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Java"/>
                <CheckBox
                    android:id="@+id/checkboxPython"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Python"/>
                <CheckBox
                    android:id="@+id/checkboxJavaScript"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="JavaScript"/>
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/agreeCheckbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/languageCodeContainer"
                android:text="Đồng ý điều khoản"
                android:textColor="@color/red"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                android:layout_marginLeft="120dp"/>

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/agreeCheckbox"
                android:layout_gravity="center"
                android:text="Submit"
                android:onClick="buttonSubmit"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>